# awsAllin1

./: pyproject.toml  topenai.py
agentcore/: .gitignore
agentcore-samples/05-blueprints/multitenant-agentic-platform/: README.md
agentcore-samples/05-blueprints/multitenant-agentic-platform/frontend/: index.html
agentcore-samples/05-blueprints/multitenant-agentic-platform/frontend/src/: App.jsx
agentcore-samples/05-blueprints/multitenant-agentic-platform/src/: cdk_app.py
agentcore-samples/05-blueprints/multitenant-agentic-platform/src/lambda_functions/async_deploy_agent/: handler.py
agentcore-samples/05-blueprints/multitenant-agentic-platform/src/lambda_functions/build_deploy_agent/: handler.py
agentcore-samples/05-blueprints/multitenant-agentic-platform/src/lambda_functions/config_injector/: handler.py
agentcore-samples/05-blueprints/multitenant-agentic-platform/src/stacks/: agent_runtime.py  api.py  database.py  frontend.py  helpers.py  lambdas.py  messaging.py
agentcore/vacation_planner/: report.md
agentcore/vacation_planner/src/vacation_planner/: crew.py
aws-bedrock/: .gitignore  pyproject.toml
aws-bedrock/demo1/: task1a_original.py  task1b_lc.py
aws-bedrock/demo2rag/: task1_rng.py  task1_testkb.py
aws-bedrock/demo2rag/files/: Task-4.ipynb
aws-bedrock/exa/: deep_research_assistant.py
aws-bedrock/iboto3/: apikey.md  bedrock_doctor.py  check_bedrock_access.py  fix_bedrock_iam.py  list_models.py  poem.py  simulate_iam.py
aws-bedrock/lc/: lc1.py
lc/: step1.py  unittest.py
ma/: agent1_single.py
tavily/: main_tavily.py
(+11 files in other folders)
