[project]
name = "aws-bedrock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.14",
    "exa-py>=2.13.0",
    "langchain-aws>=1.5.0",
    "langchain-community>=0.4.2",
    "mcp>=1.27.1",
    "openai>=2.38.0",
    "strands-agents>=1.41.0",
    "strands-agents-tools>=0.6.0",
]
